# http-source-connector

./: Cargo.toml  Makefile  README.md  Release.md  cloud-http-get-test.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: release_checklist.md
.github/workflows/: ci.yml  e2e_cloud.yml  publish.yaml  publish_dev.yaml
crates/http-source/: Cargo.toml  Connector.toml  config-example.yaml  sample-config.yaml
crates/http-source/hub/: package-meta.yaml
crates/http-source/src/: backoff.rs  config.rs  formatter.rs  http_streaming_source.rs  main.rs  source.rs  websocket_source.rs
crates/http-source/src/formatter/: http_json_record.rs  http_response_metadata.rs  http_response_record.rs  json_formatter.rs  mod.rs  text_formatter.rs
crates/mock-http-server/: Cargo.toml
crates/mock-http-server/src/: main.rs
crates/test-smartmodule-map/: Cargo.toml  SmartModule.toml
src/: main.rs
tests/: broken-stream-test.bats  cloud-http-get-header-test.bats  cloud-http-get-header-test.yaml  cloud-http-get-test.bats  cloud-http-get-test.yaml  cloud-http-post-test-v2.bats  cloud-http-post-test-v2.yaml  cloud-http-post-test.bats  cloud-http-post-test.yaml  get-smartmodule-config.yaml  get-smartmodule-test.bats  get-smartstream-test.bats  get-stream-test-config.yaml  get-stream-test-full-config.yaml  get-stream-test-full-json-config.yaml  get-stream-test-full-json.bats  get-stream-test-full.bats  get-stream-test-json-config.yaml  get-stream-test-json.bats  get-stream-test.bats  get-test-config.yaml  get-test-full-config.yaml  get-test-full-json-config.yaml  get-test-full-json.bats  get-test-full.bats  get-test-json-config.yaml  get-test-json.bats  get-test.bats  get-time-test-config.yaml  get-time-test.bats  post-test-config-v2.yaml  post-test-config.yaml  post-test-v2.bats  post-test.bats  websocket-headers-test-config.yaml  websocket-headers-test.bats  websocket-subscription-test-config.yaml  websocket-subscription-test.bats  websocket-test-config.yaml  websocket-test.bats
