[workspace]
members = [
    "crates/http-source",
    "crates/mock-http-server",
    "crates/test-smartmodule-map",
]
resolver = "2"

[profile.release-lto]
inherits = "release"
lto = true

[workspace.dependencies]
async-std = { version = "1.12",  default-features = false, features = ["attributes", "tokio1"] }

fluvio = { git = "https://github.com/infinyon/fluvio", tag = "v0.10.17"}
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", tag = "v0.10.16"}
fluvio-smartmodule = { git = "https://github.com/infinyon/fluvio.git", tag = "v0.10.16" }
