[package]
name = "http-source"
version = "0.5.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that fetches data from HTTP endpoints"

[dependencies]
async-trait = { version = "0.1", default-features = false}
futures = { version = "0.3", default-features = false}
anyhow = { version = "1.0" }
async-std = { version = "1.12",  default-features = false, features = ["attributes", "tokio1"]}
serde = { version = "1.0", default-features = false, features = ["derive"]}
reqwest = { version = "0.11" }
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
humantime = { version = "2.1", default-features = false }
url = { version = "2.3", default-features = false, features = ["serde"] }
humantime-serde = { version = "1.1", default-features = false  }
tokio-stream = { version = "0.1", default-features = false, features = ["time"] }
tokio = { version = "1.23", default-features = false, features = ["time"]}

fluvio = { git = "https://github.com/infinyon/fluvio", tag = "v0.10.4"}
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", tag = "v0.10.4", features = ["derive"]}

# workaround for building zstd for aarch64
# https://github.com/gyscos/zstd-rs/issues/177
[dependencies.zstd-sys]
version = "2.0"

[dev-dependencies]
mockito = { version = "0.31", default-features = false}
