[package]
name = "http-source"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that fetches data from HTTP endpoints"

[dependencies]
async-trait = { version = "0.1", default-features = false}
futures = { version = "0.3", default-features = false}
anyhow = { version = "1.0" }
async-std = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"]}
reqwest = { version = "0.11" }
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
humantime = { version = "2.1", default-features = false }
url = { version = "2.4", default-features = false, features = ["serde"] }
humantime-serde = { version = "1.1", default-features = false  }
tokio-stream = { version = "0.1", default-features = false, features = ["time"] }
tokio = { version = "1.29", default-features = false, features = ["time"]}

fluvio = { workspace = true }
fluvio-connector-common = { workspace = true, features = ["derive"]}

[dev-dependencies]
mockito = { version = "0.31", default-features = false}
