[package]
name = "http-source"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that fetches data from HTTP endpoints"

[dependencies]
async-std = { workspace = true }
serde = { workspace = true }

async-trait = { version = "0.1", default-features = false }
async-stream = "0.3.5"
bytes =  { version = "1.6.1", default-features = false }
futures = { version = "0.3", default-features = false }
anyhow = { version = "1.0" }
reqwest = { version = "0.12", features = ["stream"] }
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
humantime = { version = "2.1", default-features = false }
url = { version = "2.5", default-features = false, features = ["serde"] }
humantime-serde = { version = "1.1", default-features = false }
tokio-stream = { version = "0.1", default-features = false, features = ["time"] }
tokio = { version = "1.40", default-features = false, features = ["time"] }
tokio-tungstenite = { version = "0.21.0", features = [ "rustls-tls-webpki-roots" ] }
tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
encoding_rs = { version = "0.8", default-features = false }
mime = { version = "0.3", default-features = false }
http = "1.1"

fluvio = { git = "https://github.com/infinyon/fluvio", branch = "wasmtime_21" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", branch = "wasmtime_21", features = ["derive"] }
fluvio-smartengine = { git = "https://github.com/infinyon/fluvio", branch = "wasmtime_21", features = ["engine"] }
